# magnetar

./: Cargo.toml  README.md  install.sh  topbar.html
examples/: README.md  hyprland.conf  notification.html  sidebar.html
src/: error.rs  main.rs  runtime.rs
src/cli/: mod.rs
src/cli/commands/: compositor.rs  info.rs  mod.rs  new.rs  run.rs  validate.rs  widget.rs
src/compositor/: handlers.rs  hyprland.rs  mod.rs
src/config/: mod.rs
src/ipc/: mod.rs  preload.js
src/logging/: mod.rs
src/window/: mod.rs
