
[package]
name = "magnetar"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9"
webkit6 = "0.4"
gtk4-layer-shell = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "time", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
async-trait = "0.1"
chrono = "0.4"
async-channel = "2.3"
once_cell = "1.19"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
